# Rehabilitation_Robotics

./: README.md
Fuzzy Logic implementation/Fuzzy/: CMakeLists.txt  README.md  test_fuzzy.cpp
Gait Cycle Play/: GaitCycleFinal.py  README.md  data_final_leftleg.txt  data_final_leftleg_mod.txt
Gait Cycle Play/final_methods/: final_external_PID_bothlegS1.py  final_external_PID_bothlegS2.py  final_external_PID_bothlegS3.py  final_external_PID_oneleg.py  inverseKinamatics.py  shadowTech_bothlegS1.py  shadowTech_bothlegS2.py  shadowTech_oneleg.py
Gait Cycle Play/test_files/: internal_PID_bothleg.py  internal_PID_oneleg.py  motor_pos_test.py  motor_test_pwm.py  pid_motor_test.py  processdata.py
Gait Cycle recorded data/: abhisekh.txt  amit.txt  anupam.txt  argha.txt  debasis.txt  neelam.txt  payal.txt  prabin.txt  prashasti.txt  puspendra.txt  rao.txt  sainath.txt  sankha.txt  satyajit.txt  shom.txt  soumya.txt  subham.txt  sutapa.txt  tanima.txt
Image based coupler curve error detection/: CMakeLists.txt  README.md  error_detect.cpp
Image based coupler curve error detection/data_files/: hipjointExperimentalX.txt  hipjointSimulatedX.txt
Maxon Motor/Maxon/: CMakeLists.txt  GaitCycle.cpp  GaitCycleFinal.cpp  HelloEposCmd.cpp  README.md  motor_test.cpp
Maxon Motor/Maxon/include/: Definitions.h  cmaxonmotor.h
Maxon Motor/Maxon/src/: cmaxonmotor.cc
PID Optimizer/: README.md
PID optimizer/: README.md  pid_optimiser.py
Shadow Tech with WiFi/: README.md  ShadowTechFinal.py  gait_record.py  udp_client.py
Shadow Tech with WiFi/UDP_data_send/: UDP_data_send.ino
(+7 files in other folders)
